updates for JUnit 6